# contingencies-screening

./: .gitignore  README.md  pyproject.toml
doc/user/: INSTALLATION.md  SUMMARY_CONCLUSIONS.md  USAGE.md
src/contingencies_screening/: config.py  contingencies_screening.py
src/contingencies_screening/analyze_loadflow/: LR_no_taps.json  LR_taps.json  extract_results_data.py  human_analysis.py  machine_learning_analysis.py
src/contingencies_screening/commons/: __init__.py  calc_case_diffs.py  manage_files.py
src/contingencies_screening/notebook_analysis/: analyze_individual_contg_RTE.ipynb  analyze_results_RTE.ipynb  analyze_results_RTE_EBM.ipynb  analyze_results_RTE_GBR.ipynb  analyze_results_RTE_Global.ipynb  analyze_results_RTE_HM.ipynb  analyze_results_code.py
src/contingencies_screening/prepare_basecase/: create_contingencies.py  matching_elements.py  prepare_basecase.py
src/contingencies_screening/run_dynawo/: run_dynawo.py
src/contingencies_screening/run_loadflow/: run_hades.py
