[project]
name = "contingencies-screening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "guiuomsfont-aia", email = "omsg@aia.es" }
]
requires-python = ">=3.12"
dependencies = [
    "interpret>=0.6.10",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic-settings>=2.8.1",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "shap>=0.47.1",
    "typer>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99

[project.scripts]
run_contingencies_screening = "contingencies_screening.contingencies_screening:app"
train_test_loadflow_results = "contingencies_screening.analyze_loadflow.machine_learning_analysis:app"
prepare_basecase = "contingencies_screening.prepare_basecase.prepare_basecase:app"
extract_contingencies_csv = "contingencies_screening.commons.manage_files:app"

